@@ -1,8 +1,0 @@
-<dtml-var manage_page_header>
-<dtml-var manage_tabs>
-
-<h3><code>portal_fiveactions</code> Tool</h3>
-
-<p>This tool provides a bridge from Zope 3 menus to CMF actions.</p>
-
-<dtml-var manage_page_footer>
