@@ -2,8 +2,6 @@
     xmlns="http://namespaces.zope.org/zope"
     xmlns:meta="http://namespaces.zope.org/meta">
 
-  <include file="browser/meta.zcml"/>
-
   <meta:directive
       name="registerDirectory"
       namespace="http://namespaces.zope.org/cmf"
